--- a/connection_pool/pom.xml
+++ b/connection_pool/pom.xml
@@ -41,5 +41,15 @@
     	<artifactId>spring-beans</artifactId>
     	<version>${spring-version}</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-test</artifactId>
+    	<version>${spring-version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-context</artifactId>
+    	<version>${spring-version}</version>
+    </dependency>
   </dependencies>
 </project>
